- Added Bush Wolf to enemy spawner - You can spawn the Bush Wolf in the enemy tab enemy spawner
- Added Bush Wolf Enemy Insta Kill - Added Bush Wolf Enemy to Insta Kill
- Added Cave Dweller Insta Kill - Added Cave Dweller to Insta Kill
- Added Edit Deadline (Host Only) - Lets you change the deadline!
- Added Open Drop Ship On Land - Opens drop ship as soon as it lands!
- Added Close Gate - Closes Experimentation gate at the front entrance
- Added Loot Any Item Belt Bag - Lets you put any items in the belt bag
- Added Loot Through Walls Belt Bag - Lets you loot through walls with the belt bag
- Added Click Kill - Middle Click to kill enemies when click kill is enabled
- Added HP Display - Shows your hp in your the corner of the Player HUD
- Added No TZP Effects - No negative effects from TZP
- Added Unlimited TZP - Use TZP forever
- Added Audio Listener for enemy controllers - You can hear the audio around the enemy
- Added Demi God - Sets players health to 100 when its not for people you enable it for
- Added Notifications - Used for injection message and version messages
- Added Anti Kick (BUGGY) - Its only enabled after being kicked from the lobby might cause your name to be nameless and profile to be the Lethal Company logo
- Added Sell Quota - Sells as much as quota needs if there is enough items
- Added Stun - You can stun a single enemy like you can kill it
- Added Toggle Deposit Desk Door Sound - Spam opens the door making the door opening sound
- Added Spawn Hoarding Bug Infestation - Spawns a ton of Hoarding Bugs
- Fixed Turret Chams Error - When you left the moon it would cause a error
- Fixed Enemy Controller - Enemy control gets disabled when the enemy dies or gets destroyed
- Fixed Teleport Enemy To Player - It was using EnemyAI[] instead of EnemyAI
- Fixed Chams Error - Fixed a chams error with turrets when you left mid game
- Fixed God Mode Error - Added null checks to all god mode patches