@@ -178,7 +178,6 @@
 	"ServerTab.ForceLand": "Force Ship Land",
 	"ServerTab.ForceLeave": "Force Ship Leave",
 	"ServerTab.SpawnScrap": "Spawn More Scrap",
-	"ServerTab.NeverLoseScrap": "Never Lose Scrap",
 	"ServerTab.SpawnRandomMines": "Spawn Random Mines",
 	"ServerTab.SpawnRandomTurrets": "Spawn Random Turrets",
 	"ServerTab.SpawnLandmine": "Spawn Landmine",
@@ -204,7 +203,6 @@
 	"TrollTab.ShipHorn": "Toggle Ship Horn",
 	"TrollTab.ShipLights": "Toggle Ship Lights",
 	"TrollTab.FactoryLights": "Toggle Factory Lights",
-	"TrollTab.FlickerFactoryLights": "Flicker Factory Lights",
 	"TrollTab.ForceBridgeFall": "Force Bridge Fall",
 	"TrollTab.ForceSmallBridgeFall": "Force Small Bridge Fall",
 	"TrollTab.BlowAllMines": "Blow Up All Landmines",
@@ -219,7 +217,6 @@
 	"TrollTab.DeleteTerminal": "Delete Terminal",
 	"TrollTab.PJSpammer": "PJ Plushie Spammer",
 	"TrollTab.TerminalSound": "Toggle Terminal Sound",
-	"TrollTab.CloseGate": "Close Gate",
 	"TrollTab.SpawnHoardingBugInfestation": "Spawn Hoarding Bug Infestation",
 	"TrollTab.ToggleDepositDeskDoorSound": "Toggle Deposit Desk Door Sound",
 	"VisualsTab.Title": "Visuals",
@@ -359,7 +356,6 @@
 	"SuitManager.Title": "Suit Manager",
 	"SuitManager.WearBuy": "Wear On Buy",
 	"SuitManager.UnlockAll": "Unlock All",
-	"NotificationWindow.Title": "Notifcation",
 	"Cheats.Info.Bodies": "Dead Bodies: {0}",
 	"Cheats.Info.Enemies": "Enemies: {0}",
 	"Cheats.Info.MapObjects": "Map Objects: {0} ( $ {1} )",
